--- a/src/main/resources/templates/allproduct.html
+++ b/src/main/resources/templates/allproduct.html
@@ -4,66 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Repo</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
-            color: #333;
-            margin: 0;
-            padding: 20px;
-        }
-
-        h2 {
-            text-align: center;
-            color: #007bff;
-            margin-bottom: 20px;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 0 auto;
-            background-color: #fff;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            overflow: hidden;
-        }
-
-        thead {
-            background-color: #007bff;
-            color: #fff;
-        }
-
-        th, td {
-            padding: 12px 15px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-
-        th {
-            background-color: #007bff;
-            color: #fff;
-            font-weight: bold;
-            text-transform: uppercase;
-        }
-
-        tbody tr:nth-child(even) {
-            background-color: #f4f4f4;
-        }
-
-        tbody tr:hover {
-            background-color: #e9ecef;
-        }
-
-        tbody td {
-            color: #333;
-        }
-
-        tbody tr:last-child td {
-            border-bottom: none;
-        }
-    </style>
+    <link rel="stylesheet" href="/tableStyles.css">
 </head>
+
 <body>
 <h2>Product List</h2>
 <table border="1">
@@ -88,5 +31,6 @@
     </tr>
     </tbody>
 </table>
+<a href="/repo">back to menu</a>
 </body>
 </html>
