--- a/src/main/resources/templates/repo.html
+++ b/src/main/resources/templates/repo.html
@@ -3,46 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Goods Repo</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-            margin: 0;
-            padding: 20px;
-            text-align: center;
-        }
-
-        h1 {
-            color: #007bff;
-            margin-bottom: 20px;
-        }
-
-        p {
-            margin-bottom: 20px;
-            font-size: 18px;
-        }
-
-        a {
-            display: inline-block;
-            margin: 10px 20px;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            font-weight: bold;
-        }
-
-        a:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    <link rel="stylesheet" href="/repoStyles.css">
 </head>
 <body>
 <h1>Goods Repository</h1>
 <p>This is a repo entry.</p>
 <a href="/repo/allproduct">Show All Products</a>
 <a href="/repo/allpurchase">Show All Purchases</a>
+<a href="/home">back to purchase</a>
 </body>
 </html>
