--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Purchase Page</title>
-    <link rel="stylesheet" href="/styles.css"> <!--means files in static directory-->
+    <link rel="stylesheet" href="/homeStyles.css"> <!--means files in static directory-->
 </head>
 <body>
 <h2>Purchase Product</h2>
@@ -18,6 +18,9 @@
 
     <label for="quantity">Quantity:</label>
     <input type="text" id="quantity" name="quantity"><br><br>
+
+    <label for="note">Note(Optional)</label>
+    <input type="text" id="note" name="note"><br><br>
 
     <button type="submit">Purchase</button>
 </form>
@@ -36,7 +39,8 @@
                 data: {
                     userId: $('#userId').val(),
                     productId: $('#productId').val(),
-                    quantity: $('#quantity').val()
+                    quantity: $('#quantity').val(),
+                    note: $('#note').val()
                 },
                 success: function(result){
                     alert(result.message);
